--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             type="text" class="form-control"
             aria-label="Username"
             aria-describedby="basic-addon1"
+            placeholder="DIGITA + INVIO"
           >
         </div>
         
